# nix-vulnerability-scanner

./: .gitignore  .pre-commit-config.yaml  Cargo.nix  Cargo.toml  README.md  crates-io.list  crates-io.nix  crates-io.nix.old  crates.nix  default.nix  diesel.toml  index.html  release.nix  shell.nix  test.nix  update.sh
.github/workflows/: compile.yml
migrations/2018-05-29-195358_cves/: down.sql  up.sql
migrations/2018-08-27-0_patches/: down.sql  up.sql
migrations/2019-02-07-234500_initial/: down.sql  up.sql
migrations/2019-03-21-205118_db_indexes/: down.sql  up.sql
nix/: carnix.nix  crate2nix.nix  default.nix  diesel-cargo.nix  diesel.nix
src/: fs_cache.rs  get_patches.nix  log_config.rs  main.rs  nix.rs  nix_channel.rs  nix_patches.rs  nvd.rs  process.rs  release_monitoring.rs  report.rs  schema.rs
src/fs_cache/: mod.rs
src/git/: checkout.rs  clone.rs  mod.rs
src/notes/: mod.rs  model.rs  nsa.rs
src/nvd/: data.rs  mod.rs  version_cmp.rs
src/process_db/: mod.rs  models.rs  schema.rs  web.rs
src/process_db/web/: mod.rs  v1.rs  v2.rs
src/report/: attribute_mapping.rs  fs_cache.rs  get_patches.nix  mod.rs  nix.rs  nix_channel.rs  nix_patches.rs  nvd.rs
src/web/: mod.rs  queries.rs  v1.rs  v2.rs  views.rs
src/web/views/: channel.rs  diff.rs  header.rs  index.rs  issue.rs  mod.rs  response.rs  result.rs  search.rs  table.rs
static/: index.md
