[package]
name = "nix-vuln-scanner"
version = "2.1.0"
authors = ["Andreas Rammhold <andreas@rammhold.de>"]
edition = "2018"
[dependencies]
actix-web = "0.7"                 # Actix web is a simple, pragmatic and extremely fast web framework for Rust.
chrono = "0.4"
clap = "2"
diesel = { features = ["sqlite"], version =  "1.4" }                   # A safe, extensible ORM and Query Builder for PostgreSQL, SQLite, and MySQL
error-chain = "0.12"                 # Yet another error boilerplate library.
fern = "0.5"
fs2 = "0.4"
itertools = "0.8"         # Extra iterator adaptors, iterator methods, free functions, and macros.
lazy_static = "1"           # A macro for declaring lazily evaluated statics in Rust.
libflate = "0.1"
log = "0.4"
md5 = "0.3"
mktemp = "0.3"
num_cpus = "1.8"            # Get the number of CPUs on a machine.
rayon = "1.0"
regex = "1.0"             # An implementation of regular expressions for Rust. This implementation uses finite automata and gua…
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
threadpool = "1.7"                    # A thread pool for running a number of jobs on a fixed set of worker threads.
time = "0.1"             # Utilities for working with time-related functions in Rust.
walkdir = "2"                  # Recursively walk a directory.
horrorshow = "0.6"           # a templating library written in rust macros

[dependencies.brotli]
version = "2.5"
default-features = false
